# cfetch

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE.txt  Readme.md
cmake/: CFetch.cmake
example/: CMakeLists.txt  PackageLock.cmake  main.cpp
modules/: FindIconFontCppHeaders.cmake  FindImGuiColorTextEdit.cmake  FindImTerm.cmake  FindRapidJSON.cmake  FindSDL2.cmake  Findassimp.cmake  Findconcurrentqueue.cmake  Findcontinuable.cmake  Findentt.cmake  Findfmt.cmake  Findfunction2.cmake  Findglbinding.cmake  Findglm.cmake  Findimgui.cmake  Findreaderwriterqueue.cmake
modules/imgui/: CMakeLists.txt  index32.patch
